# advent-of-code-2025

./: Cargo.toml
src/day1/: main.rs
src/day1part2/: main.rs
src/day2/: main.rs
src/day2part2/: main.rs
src/day3/: main.rs
src/day3part2/: main.rs
src/day4part2/: main.rs
src/day5/: main.rs
src/day5part2/: main.rs
src/day6/: main.rs
src/day6part2/: main.rs
