[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day1part2"
path = "src/day1part2/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[[bin]]
name = "day2part2"
path = "src/day2part2/main.rs"

[[bin]]
name = "day3"
path = "src/day3/main.rs"

[[bin]]
name = "day3part2"
path = "src/day3part2/main.rs"

[[bin]]
name = "day4part2"
path = "src/day4part2/main.rs"
